--- a/blog/static/css/col.css
+++ b/blog/static/css/col.css
@@ -1,10 +1,27 @@
 .container{
+ /* background-color: blueviolet; */
+}
 
+.banner{
+    /* width: 100%; */
+    /* height: 200px; */
 }
+
+.slide{
+    margin-right: 5px;
+}
+
 .img-carosel{
-    width: 100%;
-    height: 100%;
+    
 }
+
 #content-right{
-    width: fit-content;
+    /* width: 100%; */
+    /* height: 100%; */
+    display: flex;
+    flex-direction: row;
+}
+
+.img_banner{
+    height: 45%;
 }
