--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -14,29 +14,29 @@
 
 <body>
     <header>
-
+        <div style="background-color: orangered; width: 100%; height: 100px;"></div>
     </header>
     <!-- carousel -->
     <div class="d-flex flex-row align-content-center justify-content-center" style="width: 100%;">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel" style="width: 70%;">
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
             <!-- Indicators/dots -->
-            <div class="carousel-indicators ">
-                <button type="button " data-bs-target="#demo " data-bs-slide-to="0 " class="active "></button>
-                <button type="button " data-bs-target="#demo " data-bs-slide-to="1 "></button>
-                <button type="button " data-bs-target="#demo " data-bs-slide-to="2 "></button>
+            <div class="carousel-indicators w-50">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target=" #demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
             </div>
 
             <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://cf.shopee.vn/file/vn-50009109-4159d39eeab52b6f89bfae5e29cb0abd_xxhdpi" class="d-block w-100">
+            <div class=" carousel-inner ">
+                <div class="carousel-item active ">
+                    <img src="https://cf.shopee.vn/file/vn-50009109-4159d39eeab52b6f89bfae5e29cb0abd_xxhdpi " class="d-block" style="width: 100%;">
                 </div>
                 <div class="carousel-item ">
-                    <img src="https://cf.shopee.vn/file/vn-50009109-f12976db91f5daf8b2017b1212e6a96b_xxhdpi" class="d-block w-100">
+                    <img src="https://cf.shopee.vn/file/vn-50009109-f12976db91f5daf8b2017b1212e6a96b_xxhdpi " class="d-block" style="width: 100%;">
                 </div>
                 <div class="carousel-item ">
-                    <img src="https://cf.shopee.vn/file/vn-50009109-6c066000c265a7aab7dade70b449535d_xxhdpi" class="d-block w-100">
+                    <img src="https://cf.shopee.vn/file/vn-50009109-6c066000c265a7aab7dade70b449535d_xxhdpi " class="d-block" style="width: 100%;">
                 </div>
             </div>
 
@@ -44,20 +44,19 @@
             <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon "></span>
             </button>
-            <button class="carousel-control-next" type="button " data-bs-target="#demo" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon "></span>
             </button>
         </div>
-        <div class="img" style="width: 30%;">
-            <img src="https://cf.shopee.vn/file/vn-50009109-fed2b689331aeb813aa4ececbed5748b_xhdpi ">
-            <img src="https://cf.shopee.vn/file/vn-50009109-47c1c134ed5139e7eef5bdd8160aa7bc_xhdpi ">
+        <div class="img " style="width: 30%; ">
+            <img src="https://cf.shopee.vn/file/vn-50009109-fed2b689331aeb813aa4ececbed5748b_xhdpi " style="width: 394px; height: 115px;">
+            <img src="https://cf.shopee.vn/file/vn-50009109-47c1c134ed5139e7eef5bdd8160aa7bc_xhdpi " style="width: 394px; height: 115px;">
         </div>
     </div>
 
     {% block content %} {% endblock %}
     <footer>
-        <!-- giới thiệu -->
-        <div class="row ">
+        <div class=" row ">
             <div class="col-lg-4 col-sm-1 text-center ">
                 <p>thông tin liên hệ</p>
             </div>
