--- a/blog/templates/product.html
+++ b/blog/templates/product.html
@@ -1,10 +1,11 @@
- {% extends 'base.html'%} {%block content%}
+ {% extends 'base.html'%} 
+ {%block content%}
 <div class="d-flex flex-row flex-wrap">
     {% for product in products %}
     <div class="col-12 col-md-4 col-lg-3 mb-5">
         <a class="product-item" href={% url "product-detail" product.id %} style="text-decoration: none; color: orangered;">
-            <img src="media/{{ product.img }}" class="img-fluid product-thumbnail "/>
-            <h3 class="product-title ">{{ product.name }}</h3>
+            <img src={{ product.img.url }} class="img-fluid product-thumbnail "/>
+            <h3 class="product-title">{{ product.name }}</h3>
         </a>
     </div>
     {% endfor %}
